# hello-world

./: CMakeLists.txt  README.md  build_unix.sh  build_windows.bat
src/: hello_world.cpp
